--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,13 @@
 /* Flexbox Part 1 */
 
 #flex-section1 ul {
-
+	justify-content: space-around;
+	list-style-type: none;
+	display: flex;
+	margin: 0px;
+	list-style: none;
+	margin-left: -15px;
+	margin-right: 25px;
 }
 
 /* end Flexbox Part 1 */
@@ -10,15 +16,20 @@
 /* Flexbox Part 2 */
 
 #flex-section2 ul {
-
+	display: flex;
+	margin: 0;
+	padding: 0;
 }
 
 #flex-section2 li {
+	list-style: none;
+	list-style-type: none;
 
 }
 
 #flex-section2 .item1 {
-
+	margin-left: -40px;
+	flex: 100%;
 }
 
 #flex-section2 .item2 {
