--- a/styles.css
+++ b/styles.css
@@ -28,16 +28,16 @@
 }
 
 #flex-section2 .item1 {
-	margin-left: -40px;
 	flex: 100%;
 }
 
 #flex-section2 .item2 {
-
+	order: 2;
+	flex: 100%;
 }
 
 #flex-section2 .item3 {
-
+	flex: 100%;
 }
 
 /* end Flexbox Part 2 */
