--- a/styles.css
+++ b/styles.css
@@ -46,11 +46,19 @@
 /* Flexbox Part 3 */
 
 #flex-section3 .box {
-
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 #flex-section3 .tags ul {
-
+	display: flex;
+	flex-direction: row;
+	list-style-type: none;
+	flex-wrap: wrap;
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
 
 /* end Flexbox Part 3 */
@@ -59,7 +67,11 @@
 /* Grid Part 1 */
 
 #grid-section1 .grid {
-
+	display: grid;
+	column-gap: 20px;
+	row-gap: 20px;
+	grid-template-columns: auto auto auto auto;
+	grid-auto-rows: 100px;
 }
 
 /* end Grid Part 1 */
@@ -68,11 +80,15 @@
 /* Grid Part 2 */
 
 #grid-section2 .gridboxblue {
-
+	grid-column: 2/-1;
+	grid-row: 1/4;
+	order: 2; 
+	position: relative;
 }
 
 #grid-section2 .gridboxred {
-
+	grid-column: 1/3;
+    grid-row: 2/3;
 }
 
 /* end Grid Part 2 */
