--- a/styles.css
+++ b/styles.css
@@ -97,23 +97,29 @@
 /* Grid Part 3 */
 
 #grid-section3 .grid {
-
+	display: grid;
+	column-gap: 10px;
+    gap: 10px;
+    grid-template-rows: 100px 300px 100px;
+	grid-template-columns: 1 1 1;
+	row-gap: 10px;
+	grid-template-areas: "header header header" "main main sidebar" "footer footer footer";
 }
 
 #grid-section3 .box1 {
-
+	grid-area: header;
 }
 
 #grid-section3 .box2 {
-
+	grid-area: sidebar;
 }
 
 #grid-section3 .box3 {
-
+	grid-area: main;
 }
 
 #grid-section3 .box4 {
-
+	grid-area: footer;
 }
 
 /* end Grid Part 3 */
@@ -127,15 +133,14 @@
 	color: #000;
 	padding: 20px;
 	text-decoration: none;
-
+	transition: background-color 3s;
 
 }
 
 #transition-section .box a:hover {
 	background-color: #cc0000;
 	color: #fff;
-
-
+	transition: background-color 0.5s;
 }
 
 /* end Transition Part */
